<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.14">
  <GVL Name="GVL_Laser" Id="{78514df5-9275-4b76-9509-5938ac060643}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL PERSISTENT
	{attribute 'pytmc' := 'pv: HPO:LPS:AMPHOS'}
	stAmphosSP : ST_LaserSetpoints;
	{attribute 'pytmc' := 'pv: HPO:LPS:OPCPA'}
	stOpcpaSP : ST_LaserSetpoints;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>